feat: Enhance UI with glowing effects and theme improvements
Introduces animated glowing effects for the application title and icons, as well as refined focus states for input fields. Theme configurations have been updated to include new properties for text glow, icon glow, and input focus styles, enhancing the visual appeal and interactivity of the Nimbus Reality Composer.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nimbus Reality Composer</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      @keyframes pulse-glow {
+        0%, 100% {
+          opacity: 0.8;
+        }
+        50% {
+          opacity: 1;
+        }
+      }
+      .animate-pulse-glow {
+        animation: pulse-glow 4s ease-in-out infinite;
+      }
+    </style>
   <script type="importmap">
 {
   "imports": {
