--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
       .animate-pulse-glow {
         animation: pulse-glow 4s ease-in-out infinite;
       }
+      @keyframes fade-in-chunk {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+      .animate-fade-in-chunk {
+        animation: fade-in-chunk 0.4s ease-out forwards;
+      }
     </style>
   <script type="importmap">
 {
