feat: Enhance app structure and i18n support
Refactors core application components and configurations to introduce internationalization (i18n) support. Updates dependencies, modifies theme configurations for better clarity, and standardizes initial messages. Introduces a new `Language` enum and integrates it into the `Message` and `PromptInput` components via a `LanguageContext`.

Key changes include:
- Adding `@vitejs/plugin-react` to `package.json`.
- Updating `tsconfig.json` for module resolution and types.
- Configuring Vite with `react()` plugin and server settings.
- Introducing a `Language` enum and modifying `Persona` type for i18n keys.
- Standardizing initial messages using a translation function.
- Updating theme configurations with new color palettes.
- Adjusting Gemini service error messages for conciseness.
- Integrating `useLanguage` hook for translatable strings in UI components.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
       .animate-fade-in-chunk {
         animation: fade-in-chunk 0.4s ease-out forwards;
       }
+      @keyframes fade-in {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+      .animate-fade-in {
+        animation: fade-in 0.5s ease-out forwards;
+      }
       @keyframes glint {
         0% {
             transform: translateX(-100%) skewX(-20deg);
@@ -63,7 +74,7 @@
         100% { background-position: 0% 50%; }
       }
       .gradient-bg-dark {
-        background: linear-gradient(-45deg, #0f172a, #1e293b, #334155, #1e293b);
+        background: linear-gradient(-45deg, #000000, #111111, #000000, #222222);
         background-size: 400% 400%;
         animation: animated-gradient 30s ease infinite;
       }
@@ -121,7 +132,6 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
