--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         100% { background-position: 0% 50%; }
       }
       .gradient-bg-dark {
-        background: linear-gradient(-45deg, #000000, #111111, #000000, #222222);
+        background: linear-gradient(-45deg, #020617, #0f172a, #020617, #1e293b);
         background-size: 400% 400%;
         animation: animated-gradient 30s ease infinite;
       }
@@ -89,14 +89,6 @@
         animation: animated-gradient 30s ease infinite;
       }
 
-      @keyframes message-pulse {
-        0%, 100% { transform: scale(1); opacity: 1; }
-        50% { transform: scale(1.01); opacity: 0.95; }
-      }
-      .animate-message-pulse {
-        animation: message-pulse 2s ease-in-out infinite;
-      }
-      
       .persona-icon-container:hover .persona-icon {
         transform: scale(1.2) rotate(-10deg);
       }
